5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1595_2894.log
== TEST (2019-03-21 16:01:12) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
????? = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total ==?????

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 5
    ????? = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:41:31) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
 valor= float(input("Qual o valor unitario do jogo? = 50 "))

# Calculo do valor a ser pago, incluindo o frete:
total =(valor)

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 5
    valor= float(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:42:17) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
 valor= float(input("Qual o valor unitario do jogo? "= 50))

# Calculo do valor a ser pago, incluindo o frete:
total =(valor)

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 5
    valor= float(input("Qual o valor unitario do jogo? "= 50))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:42:24) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
 valor= float(input("Qual o valor unitario do jogo? "= 50))

# Calculo do valor a ser pago, incluindo o frete:
total =(valor)

# Impressao do valor total:
print(?????)
-- EXECUTION TIME:
0.166164
-- ERROR:
  File "/home/codebench/codes/1595/2894/main.py", line 5
    valor= float(input("Qual o valor unitario do jogo? "= 50))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:43:16) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
 valor= float(input("Qual o valor unitario do jogo? " = 50))

# Calculo do valor a ser pago, incluindo o frete:
total =(valor)

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 5
    valor= float(input("Qual o valor unitario do jogo? " = 50))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:46:17) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
????? = f???t(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = ?????

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:46:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = ?????

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 8
    total = ?????
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:47:38) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))
print(Qual o valor unitario do jogo? = 200)
# Calculo do valor a ser pago, incluindo o frete:
total = 

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 6
    print(Qual o valor unitario do jogo? = 200)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:48:32) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))
Qual o valor unitario do jogo? = 20
# Calculo do valor a ser pago, incluindo o frete:
total = 

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 6
    Qual o valor unitario do jogo? = 20
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:12:01) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("20.95"))
Qual o valor unitario do jogo? = 20
# Calculo do valor a ser pago, incluindo o frete:
total = 

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 6
    Qual o valor unitario do jogo? = 20
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:24:34) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("20.95"))
Qual o valor unitario do jogo= '20.95'
# Calculo do valor a ser pago, incluindo o frete:
total = 

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 6
    Qual o valor unitario do jogo= '20.95'
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:25:08) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("20.95"))
Qual o valor unitario do jogo= '20.95'
# Calculo do valor a ser pago, incluindo o frete:
total = '500'

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 6
    Qual o valor unitario do jogo= '20.95'
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:31:19) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor unitario do jogo?"))
Qual o valor unitario do jogo= '20.95'
# Calculo do valor a ser pago, incluindo o frete:
total = var *8+45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.167652
-- ERROR:
  File "/home/codebench/codes/1595/2894/main.py", line 6
    Qual o valor unitario do jogo= '20.95'
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:31:21) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor unitario do jogo?"))
Qual o valor unitario do jogo= '20.95'
# Calculo do valor a ser pago, incluindo o frete:
total = var *8+45

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 6
    Qual o valor unitario do jogo= '20.95'
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:31:55) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = var * 8+45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:31:58) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = var * 8+45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.172555
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:33:55) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = var * 8+45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:34:09) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = var * 8+45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.15926
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:36:31) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = var * 8+45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:36:52) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = var * 8+45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.149635
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:29:34) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = var * 8 + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:29:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = var * 8 + 45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.136882
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
